--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -17,7 +17,10 @@
 
 <!-- form helper -->
 <!-- form_for（Class名稱.new（以該類別建立model物件（實體）））：當form_for發現括弧內為 全新model（剛剛長出來）時，就會自動生成 路徑、傳送方法、隱藏token欄位的html-->
-<%= form_for(Candidate.new) do |form|%>
+<!-- 欄位要對應migration的欄位名稱 -->
+<!-- 不過建立物件的行為 應該交給controller做會比較好，所以把 Candidate.new寫到controller new方法裡，並指定給實體變數 @candidate，這裡放實體變數-->
+<!-- view不做邏輯運算和物件建立 -->
+<%= form_for(@candidate) do |form|%>
 
 <div>
     <%= form.label :name %> 
@@ -66,3 +69,7 @@
 <!-- 例如：5.times do |i|
             puts i
         end -->
+
+<!-- 輸入框輸入的東西會被抓到一包參數中：Parameters: {"authenticity_token"=>"[FILTERED]", "candidate"=>{"name"=>"123", "party"=>"456", "age"=>"26", "politic"=>"123"}, "commit"=>"Create Candidate"} -->
+<!-- 此Parameters為一個hash，有兩個key，輸入框輸入的資訊，都被抓到candidate key中，並形成另一個hash："candidate"=>{"name"=>"123", "party"=>"456", "age"=>"26", "politic"=>"123"}-->
+<!-- 舊式hash寫法 {key => value} ； 新式 {key: value} -->
