--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Add Candidate</h1>
-
+<!-- 新建候選人頁面/candidates/new -->
 <!-- <form action="/candidates" method="POST">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"> -->
     <!-- rails的隱藏保護用欄位，當有表單往後端送時，需要此欄位 -->
