--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,8 +1,9 @@
 <!-- xxxx.html.erb 為erb檔案，但這個erb檔轉譯完後，請當作html檔對待 -->
 <!-- /candidates/ 候選人清單頁面，列出所有候選人 -->
 
-<%= flash[:notice] %>
+<!-- <%= flash[:notice] %> -->
 <!-- 只要有被印過一次，再重新整理就會不見 -->
+<!-- 比較適合放在公版（layouts） -->
 
 <h1>候選人清單頁面（首頁）</h1>
 
