--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -5,7 +5,7 @@
 <!-- 只要有被印過一次，再重新整理就會不見 -->
 <!-- 比較適合放在公版（layouts） -->
 
-<h1>候選人清單頁面（首頁）</h1>
+<h1>候選人清單</h1>
 
 <!-- link_to helper 可長出連結 -->
 <!-- link_to 'Add Candidate', '/candidates/new'  --> <!-- 網址寫死 -->
