--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -7,9 +7,9 @@
     <!-- 在controller show action 中以id抓到資料後，印出name key對應的值 -->
 
     <ul>
-        <li>party: <%= @candidate.party %></li>
-        <li>age: <%= @candidate.age %></li>
-        <li>politic: <%= @candidate.politic %></li>
+        <li>黨派: <%= @candidate.party %></li>
+        <li>年齡: <%= @candidate.age %></li>
+        <li>政見: <%= @candidate.politic %></li>
     </ul>
 <% else %>
 
