--- a/app/views/candidates/edit.html.erb
+++ b/app/views/candidates/edit.html.erb
@@ -1,5 +1,5 @@
 <!-- /candidates/:id/edit 編輯候選人資料 頁面 -->
-<h1>編輯候選人資料</h1>
+<h1 class="title">編輯候選人資料</h1>
 <!-- 與 新建表單 差不多 -->
 
 <%= render 'form', candidate: @candidate %>
