--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -5,11 +5,11 @@
 <!-- 只要有被印過一次，再重新整理就會不見 -->
 <!-- 比較適合放在公版（layouts） -->
 
-<h1>候選人清單</h1>
+<h1 class="title">候選人列表</h1>
 
 <!-- link_to helper 可長出連結 -->
 <!-- link_to 'Add Candidate', '/candidates/new'  --> <!-- 網址寫死 -->
-<%= link_to '新建候選人', new_candidate_path %>
+<%= link_to '新建候選人', new_candidate_path, class: 'create_candidate button is-primary' %>
 <!-- link_to '連結顯示之字樣', '點下連結後要前往的網址'（字串型態）（可以Prexfix_path表示） -->
 <!--  new_candidate（Prefix）  GET    /candidates/new(.:format)     candidates#new -->
 <!--  路徑對照表中Prefix為空表示同上-->
@@ -18,10 +18,8 @@
 <!-- link_to helper 可長出：<a href="/candidates/new">Add Candidate</a> -->
 <!-- /candidates/new為 新建候選人頁面 -->
 
-
-
 <table>
-    <tbody class="table table-striped">
+    <tbody class="table">
         <tr>
             <td></td>
             <td>得票數</td>
@@ -34,7 +32,7 @@
         <% @candidates.each do |candidate| %> <!-- 沒有=，有需要「輸出」（印出來）東西時才要加= ，迴圈本身不用印，迴圈裡的東西才要印（呈現於畫面上）-->
         <tr>
             <!-- candidate是@candidates資料們中的單一資料 -->
-            <td><%= link_to '投票', vote_candidate_path(candidate.id),  method: 'post' %></td>
+            <td><%= link_to '投票', vote_candidate_path(candidate.id),  method: 'post', class: 'button is-primary' %></td>
             <!--  vote_candidate   POST   /candidates/:id/vote(.:format)       candidates#vote -->
             <!-- 預設會用GET方法連 -->
             <!-- <td><a rel="nofollow" data-method="post" href="/candidates/1/vote">投票</a></td> -->
@@ -66,17 +64,17 @@
             <!-- rake -T ：看rails專案中有哪些rake可以用-->
             <!-- 去lib > tasks加任務 -->
     
-            <td><%= link_to candidate.name, candidate_path(candidate.id) %></td>
+            <td><%= link_to candidate.name, candidate_path(candidate.id), class: 'has-text-grey-dark' %></td>
             <!-- <td><a href='/candidates/<%= candidate.id %>'><%= candidate.name %></a></td> -->
             <!-- 單一候選人資料的name（migration欄位名稱 所對應的 使用者輸入的值） -->
             <!-- candidate GET   /candidates/:id(.:format)    candidates#show -->
             <td><%= candidate.party %></td>
             <td><%= candidate.age %></td>
             <td> <!-- 刪除、編輯等按鈕 -->
-                <%= link_to '編輯', edit_candidate_path(candidate.id) %>
+                <%= link_to '編輯', edit_candidate_path(candidate.id), class: 'button is-light' %>
                 <!--  edit_candidate   GET   /candidates/:id/edit  candidates#edit -->
                 <!-- 編輯候選人資料頁面路徑 /candidates/:id/edit -->
-                <%= link_to '刪除', candidate_path(candidate.id), method: 'delete', data: {confirm: "確定刪除?"} %>
+                <%= link_to '刪除', candidate_path(candidate.id), method: 'delete', data: {confirm: "確定刪除?"}, class: 'button is-danger' %>
                 <!-- <%= link_to 'Delete', candidate_path(candidate.id),data: {turbo_method: :delete, turbo_confirm: '確定刪除?'} %> --> <!-- rails 7寫法 -->
                 <!-- <%= link_to '刪除', candidate_path(candidate.id), method: 'delete', data: {confirm: "確定刪除?"} %> -->
                 <!-- candidate DELETE /candidates/:id(.:format)  candidates#destroy -->
