--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -1,5 +1,5 @@
 <!-- /candidates/new新建候選人資料頁面 -->
-<h1>新建候選人</h1>
+<h1 class="title">新建候選人</h1>
 
 <%= render 'form', candidate: @candidate %>
 <!-- partial render 局部渲染 -->
