--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,13 @@
  /* 星號加等號在rails的css中不會被判定為註解（沒等號的話會被判定為註解） */
  /* require_tree . 表示會把stylesheets目錄中所有css打包成一個檔案，把檔案目錄都require引入 進來*/
  /* require_self 引入本檔案（在此檔案裡寫的css也會被引入）*/
+
+ .title {
+    margin-top: 25px;
+    margin-left: 10px;
+ }
+
+// 首頁新建候選人按鈕
+ .create_candidate {
+    margin-left: 10px;
+ }
